--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,6 @@
 theme: minima
-title: GitHub website
+title: Challenge Lab
+description: Thank you for visiting the Challenge Lab!
+PLEASE NOTE:  We are still working hard to finalize this NEW Challenge Lab! 
+This Lab will be ready for your review on October 26th, 2023!
+Thank you and we would love your feedback!
